:white_check_mark: Restructured the crate.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,23 @@
+---
 language: rust
+script:
+- "./_test/check-exercises.sh"
+- "./bin/fetch-configlet"
+- "./bin/configlet lint ."
+sudo: false
+rust:
+  - stable
+  - beta
+  - nightly
+env:
+  - DENYWARNINGS=
+  - DENYWARNINGS=1
+matrix:
+  include:
+    - rust: nightly
+      env: BENCHMARK=1
+      script: "./_test/check-exercises.sh"
+  allow_failures:
+    - rust: nightly
+    - rust: beta
+      env: DENYWARNINGS=1
