--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
 [package]
 name = "measurements"
 version = "0.1.0"
+
+[dependencies]
+serde = "1.0.18"
+serde_derive = "1.0.18"
+serde_json = "1.0.5"
